New generic insert/update form code
